--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,13 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <section id="contacts">
-            Twitter: <a href="https://twitter.com/{{ site.twitter_username }}">{{ site.twitter_username }}</a>
-            E-mail: <a href="mailto:{{ site.twitter_username }}0@gmail.com">{{ site.twitter_username }}0@gmail.com</a>
+            <a href="mailto:{{ site.twitter_username }}0@gmail.com">E-mail</a>,
+            <a href="https://github.com/{{ site.twitter_username }}">Github</a>,
+            <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>
+        </section>
+
+        <section id="projects">
+            <a href="https://github.com/{{ site.twitter_username }}/RP2">RP2 Crypto Tax</a>,
         </section>
 
         <section id="downloads">
