--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         </section>
 
         <section id="projects">
-            Projects: <a href="https://github.com/{{ site.twitter_username }}/RP2">RP2 Crypto Tax</a>,
+            Projects: <a href="https://github.com/{{ site.twitter_username }}/RP2">RP2 Crypto Tax</a>
         </section>
 
         <section id="downloads">
