--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
         Contacts: <a href="mailto:{{ site.twitter_username }}0@gmail.com">E-mail</a>,
         <a href="https://github.com/{{ site.twitter_username }}">Github</a>,
         <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a><br>
-        Projects: <a href="https://github.com/{{ site.twitter_username }}/RP2">RP2 Crypto Tax</a>
+        Projects: <a href="https://github.com/{{ site.twitter_username }}/RP2">RP2 Crypto Tax</a><p>
+        Disclaimer: the contents of this blog are not intended as investment advice.
         </small>
 
         <section id="downloads">
