--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <a href="https://github.com/{{ site.twitter_username }}">Github</a>,
         <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a><br>
         Projects: <a href="https://github.com/{{ site.twitter_username }}/RP2">RP2 Crypto Tax</a><p>
-        Disclaimer: the contents of this blog are not intended as investment advice.
+        Disclaimer: the contents of this blog are not investment advice.
         </small>
 
         <section id="downloads">
