--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,16 @@
 
     <header>
       <div class="container">
+        <table>
+          <tr>
+            <td><a href="index.html">Blog</a></td>
+            <td><a href="projects.html">Projects</a></td>
+            <td><a href="about.html">About</a></td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="container">
         <a id="a-title" href="{{ '/' | relative_url }}">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
