--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -14,15 +14,16 @@
 
     <header>
       <div class="container">
-        <table>
-          <tr>
-            <td><a href="index.html">Blog</a></td>
-            <td><a href="projects.html">Projects</a></td>
-            <td><a href="about.html">About</a></td>
-          </tr>
-        </table>
+        <small>
+          <table style="">
+            <tr>
+              <td><a href="index.html">Blog</a></td>
+              <td><a href="projects.html">Projects</a></td>
+              <td><a href="about.html">About</a></td>
+            </tr>
+          </table>
+        </small>
       </div>
-
       <div class="container">
         <a id="a-title" href="{{ '/' | relative_url }}">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
@@ -30,10 +31,6 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <small>
-        Contacts: <a href="mailto:{{ site.twitter_username }}0@gmail.com">E-mail</a>,
-        <a href="https://github.com/{{ site.twitter_username }}">Github</a>,
-        <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a><br>
-        Projects: <a href="https://github.com/{{ site.twitter_username }}/RP2">RP2 Crypto Tax</a><p>
         Disclaimer: the contents of this blog are not investment advice.
         </small>
 
