--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,6 +24,10 @@
         </table>
         </small>
       </div>
+
+      <div class="container">
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+      </div>
     </header>
 
     <div class="container">
