--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="container">
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+        <h1>{{ page.title }}</h1>
       </div>
     </header>
 
