--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,9 +17,9 @@
         <small>
           <table style="">
             <tr>
-              <td><a href="index.html">Blog</a></td>
-              <td><a href="projects.html">Projects</a></td>
-              <td><a href="about.html">About</a></td>
+              <td><a href="index.html">blog</a></td>
+              <td><a href="projects.html">projects</a></td>
+              <td><a href="about.html">about</a></td>
             </tr>
           </table>
         </small>
