--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,6 +8,12 @@
     {% include head-custom.html %}
 
 {% seo %}
+    <style>
+      th, td {
+        padding: 5px;
+        text-align: left;
+      }
+    </style>
   </head>
 
   <body>
