--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,7 +10,6 @@
 {% seo %}
     <style>
       th, td {
-        padding: 5px;
         text-align: left;
       }
     </style>
@@ -21,7 +20,7 @@
     <header>
       <div class="container">
         <small>
-          <table style="">
+          <table>
             <tr>
               <td><a href="index.html">blog</a></td>
               <td><a href="projects.html">projects</a></td>
