--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,6 +25,7 @@
             <tr>
               <td><a href="index.html">blog</a></td>
               <td><a href="projects.html">projects</a></td>
+              <td><a href="verification.html">verification</a></td>
               <td><a href="about.html">about</a></td>
             </tr>
         </table>
