--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,10 +23,10 @@
         <small>
           <table>
             <tr>
-              <td><a href="{{ site.url }}/index.html">blog</a></td>
-              <td><a href="{{ site.url }}/projects.html">projects</a></td>
-              <td><a href="{{ site.url }}/verification.html">verification</a></td>
-              <td><a href="{{ site.url }}/about.html">about</a></td>
+              <td><a href="{{ site.url }}/{{ site.baseurl }}/index.html">blog</a></td>
+              <td><a href="{{ site.url }}/{{ site.baseurl }}/projects.html">projects</a></td>
+              <td><a href="{{ site.url }}/{{ site.baseurl }}/verification.html">verification</a></td>
+              <td><a href="{{ site.url }}/{{ site.baseurl }}/about.html">about</a></td>
             </tr>
         </table>
         </small>
