--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,10 +23,10 @@
         <small>
           <table>
             <tr>
-              <td><a href="../../../../index.html">blog</a></td>
-              <td><a href="../../../../projects.html">projects</a></td>
-              <td><a href="../../../../verification.html">verification</a></td>
-              <td><a href="../../../../about.html">about</a></td>
+              <td><a href="../../../../../index.html">blog</a></td>
+              <td><a href="../../../../../projects.html">projects</a></td>
+              <td><a href="../../../../../verification.html">verification</a></td>
+              <td><a href="../../../../../about.html">about</a></td>
             </tr>
         </table>
         </small>
