--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <small>
-        Disclaimer: the contents of this blog are not investment advice.
+          Disclaimer: the contents of this blog are not investment or tax advice.
         </small>
       </div>
     </header>
