--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@
 
     <div class="container">
       <section id="main_content">
-        <small>{{ page.date | date: "%-d %B %Y" }}</small>
+        <small>{{ page.date | date: "%B %-d, %Y" }}</small>
         <h1>{{ page.title }}</h1>
 
         <p class="view">by {{ page.author | default: site.author }}</p>
