--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
               <td><a href="index.html">blog</a></td>
               <td><a href="projects.html">projects</a></td>
               <td><a href="verification.html">verification</a></td>
-              <td><a href="about.html">about</a></td>
+              <td><a href="about.html">about/donations</a></td>
             </tr>
           </table>
         </small>
