--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,7 +26,7 @@
               <td><a href="index.html">blog</a></td>
               <td><a href="projects.html">projects</a></td>
               <td><a href="verification.html">verification</a></td>
-              <td><a href="about.html">about/donations</a></td>
+              <td><a href="donations.html">about/donations</a></td>
             </tr>
         </table>
         </small>
